#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(festcat, 0.1, sergioller@gmail.com)
AM_INIT_AUTOMAKE(festcat, 2.6)
AC_CONFIG_SRCDIR([src/festcat-hts_engine.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.

AC_OUTPUT(Makefile doc/Makefile scripts/Makefile share/Makefile src/Makefile)
